  * geom_rug: new to add marginal rug plots
  * geom_smooth: added example showing how to use geom_smooth with your own models
  * geom_smooth: fixed bug where if se=FALSE x axis always includes 0
  * geom_vline, geom_hline: yet another rewrite which should make them more powerful and less error prone.  
  * position_stack: fixed bug when data was empty
  * qplot: allow qplot to use computed aesthetics too
  * scale_continuous: tweaks to minor breaks to make appearance better on wider range of coordinate systems
  * scale_discrete: all discrete scales now have labels argument which you can use to override the factor levels
  * scale_discrete: now works correctly with character vectors
  * scale_size: changed default range to [0.5, 3] to better reflect new sizing decisions
  * scale_size: legends resize to avoid overlaps
  * scale_x_continuous, scale_y_continuous: new convenience functions xlim and ylim (and zlim) that make it even easier to adjust the limits of the x, y, and z axes
  * stat_bin, geom_area: fixed bug in combination of stat_bin and geom_area that made it difficult to draw frequency polygons
  * stat_bin: fixed bug which resulted in increased counts when the x axis was a categorical variable with a single level (thanks to Bob Muenchen for pointing this out!)
  * stat_bin: no longer incorrectly warns that binwidth is unspecified when breaks are set
  * stat_bin: now takes origin argument to manually specify origin of first bin (default is round_any(min(range), bin_width, floor))
  * stat_boxplot, stat_contour, stat_density2d, stat_qq, stat_density: na.rm parameter added to the following statistics (thanks to Leena Choi for suggesting this)
  * stat_function: new, makes it easy to superimpose a function on the plot
  * stat_qq: axes flipped to agree with base R
  * stat_qq: now uses sample aesthetic to select variable for summary
  * stat_quantile: updated to work with latest version of quantreg